Header Call and Quote

--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 			<h1 class="sr-only">Mike's Airport Cars</h1>
 				<div class="header-logo">
 					<img src="img/Mikes-Airport-Cars.svg" alt="Mike's Airport Cars - Your Local Airport Transfer Specialist">
+					<p>Call Us <a href="tel:02392421164">02392 421 164</a></p>
+					<button data-toggle="modal" data-target="#quotemodal" class="btn btn-warning">Quote Me</button>
 				</div>
 			</div>
 		</div>
@@ -240,7 +242,7 @@
 
 						<h3>
 							<i class="fa fa-phone quickinfo-fa"></i>
-							<span class="quickinfo-tel" itemprop="telephone">02392421164</span>
+							<span class="quickinfo-tel" itemprop="telephone"><a href="tel:02392421164">02392 421 164</a></span>
 						</h3>
 
 						<a href="http://www.facebook.com/www.mikesairportcars.co.uk/" target="_blank"><h3>
